# kfbim

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  HANDOFF.md  PLAN.md  PROGRESS.md  README.md  change_summary_mathematics.md  laplace_interior_2d_N128.csv
apps/: CMakeLists.txt
core/: CMakeLists.txt
core/geometry/: curve_resampler_2d.cpp  curve_resampler_2d.hpp  grid_pair_2d.cpp  grid_pair_2d.hpp  grid_pair_3d.cpp  grid_pair_3d.hpp
core/gmres/: gmres.cpp
core/interface/: interface_2d.cpp  interface_2d.hpp  interface_3d.hpp
core/local_cauchy/: laplace_panel_solver_2d.hpp  local_poly.hpp
core/operator/: laplace_kfbi_operator.cpp  laplace_kfbi_operator.hpp  laplace_potential.cpp  laplace_potential.hpp
core/problems/: laplace_interface_solver_2d.cpp  laplace_interface_solver_2d.hpp  laplace_interior.cpp  laplace_interior.hpp
core/solver/: i_bulk_solver.hpp  iim_laplace_2d.hpp  laplace_fft_bulk_solver_2d.cpp  laplace_fft_bulk_solver_2d.hpp  laplace_zfft_bulk_solver_2d.cpp  laplace_zfft_bulk_solver_2d.hpp  laplace_zfft_bulk_solver_3d.cpp  laplace_zfft_bulk_solver_3d.hpp
core/transfer/: i_restrict.hpp  i_spread.hpp  laplace_restrict_2d.cpp  laplace_restrict_2d.hpp  laplace_spread_2d.cpp  laplace_spread_2d.hpp
include/kfbim/: geometry.hpp  laplace.hpp
notes/: bie.md  iim.md  iim_correction_formula.md  kfbim_mathematics.md  kfbim_theory.md  math.md  parallel_plan.md  shape_opt.tex  sphere_modes.tex  theory.md
old-codes/: CauchyProblemSolvers.h
problems/: CMakeLists.txt  laplace_exterior.hpp  laplace_interface.hpp  laplace_interior.hpp
python/: visualize_bfs_labeling.py  visualize_domain_labels.py  visualize_grid_pair.py  visualize_grid_pair_3d.py  visualize_iim_2d.py  visualize_iim_2d_taylor.py  visualize_laplace_dl_3fold.py  visualize_laplace_iface_2d.py  visualize_laplace_interior_2d_from_csv.py  visualize_laplace_interior_circle_2d.py  visualize_local_cauchy.py  visualize_nontrivial_domain.py  visualize_panels.py  visualize_screened_star3.py  visualize_transfer_2d.py  visualize_transmission_torus_3d.py
scripts/: visualize_bfs_labeling.py  visualize_domain_labels.py  visualize_grid_pair.py  visualize_grid_pair_3d.py  visualize_iim_2d.py  visualize_iim_2d_taylor.py  visualize_laplace_dl_3fold.py  visualize_laplace_iface_2d.py  visualize_laplace_interior_2d_from_csv.py  visualize_laplace_interior_circle_2d.py  visualize_local_cauchy.py  visualize_nontrivial_domain.py  visualize_panels.py  visualize_transfer_2d.py  visualize_transmission_constant_ratio_2d.py
src/: CMakeLists.txt
src/bulk_solvers/: laplace_zfft_bulk_solver_2d.hpp  laplace_zfft_bulk_solver_3d.hpp
src/geometry/: curve_resampler_2d.cpp  curve_resampler_2d.hpp  grid_pair_2d.cpp  grid_pair_2d.hpp  grid_pair_3d.cpp  grid_pair_3d.hpp  p2_curve_2d.hpp  p2_projection_2d.cpp  p2_projection_3d.cpp  p2_surface_3d.hpp
src/gmres/: gmres.cpp  gmres.hpp  i_outer_solver.hpp
src/grid/: structured_grid_ops.hpp
src/interface/: interface_2d.cpp  interface_2d.hpp  interface_3d.cpp  interface_3d.hpp
src/local_cauchy/: laplace_panel_solver_2d.hpp  laplace_patch_solver_3d.hpp  local_poly.hpp
src/operator/: i_kfbi_operator.hpp  laplace_kfbi_operator.cpp  laplace_kfbi_operator.hpp  laplace_potential.cpp  laplace_potential.hpp  stokes_kfbi_operator.hpp
src/operators/: laplace_bvp_2d.cpp  laplace_bvp_2d.hpp  laplace_bvp_3d.cpp  laplace_bvp_3d.hpp  laplace_transmission_2d.cpp  laplace_transmission_2d.hpp  laplace_transmission_3d.cpp  laplace_transmission_3d.hpp
src/potentials/: laplace_potential.cpp  laplace_potential.hpp
src/problems/: laplace_bvp_2d.cpp  laplace_bvp_2d.hpp  laplace_interior.cpp  laplace_interior.hpp  laplace_transmission_constant_ratio_2d.cpp  laplace_transmission_constant_ratio_2d.hpp
src/transfer/: i_restrict.hpp  i_spread.hpp  laplace_correction_support.hpp  laplace_projection_correction_2d.hpp  laplace_restrict_2d.cpp  laplace_restrict_2d.hpp  laplace_restrict_3d.cpp  laplace_restrict_3d.hpp  laplace_spread_2d.cpp  laplace_spread_2d.hpp  laplace_spread_3d.cpp  laplace_spread_3d.hpp
tests/: CMakeLists.txt  p2_ellipsoid_fixture_3d.hpp  p2_sphere_fixture_3d.hpp  p2_torus_fixture_3d.hpp  test_bvp.cpp  test_bvp_3d.cpp  test_core.cpp  test_dirichlet.cpp  test_fft.cpp  test_grid.cpp  test_grid_pair.cpp  test_iim.cpp  test_iim_2d.cpp  test_iim_spread_2d.cpp  test_interface.cpp  test_interface_3d.cpp  test_kfbi_laplace_2d.cpp  test_laplace_double_layer_2d.cpp  test_laplace_iface_2d.cpp  test_laplace_interface_solver_2d.cpp  test_laplace_interior_2d.cpp  test_laplace_interior_circle_2d.cpp  test_laplace_interior_screened_2d.cpp  test_laplace_potential_2d.cpp  test_laplace_transmission_constant_ratio_2d.cpp  test_local_cauchy.cpp  test_pair.cpp  test_potential.cpp  test_projection_2d.cpp  test_projection_3d.cpp  test_refactor_utilities.cpp  test_screened.cpp  test_solver.cpp  test_transfer_2d.cpp  test_transmission.cpp  test_transmission_3d.cpp  test_transmission_ellipsoid_3d.cpp  test_transmission_periodic_2d.cpp  test_transmission_torus_3d.cpp
tests/archive/: test_dirichlet.cpp  test_fft.cpp  test_grid.cpp  test_grid_alignment_pitfall_2d_legacy_gauss.cpp  test_iim.cpp  test_iim_spread_2d.cpp  test_kfbi_laplace_2d.cpp  test_laplace_double_layer_2d.cpp  test_laplace_iface_2d.cpp  test_laplace_interface_solver_2d.cpp  test_pair.cpp  test_potential.cpp  test_screened.cpp
